--- a/src/main/webapp/aftaler.html
+++ b/src/main/webapp/aftaler.html
@@ -13,9 +13,11 @@
     <div class="" id="aftaleMain">
     <h3>Her kommer aftaler</h3><br>
 
-      <a href="#" id="linkSelectPage">Vælg aftale...</a><br><br>
+        <button class="button" type="Submit" id="fetchAftale" onclick="fetchAftale()">Hent aftaler...</button>
     </div>
-
+    <div id="timestampfelt"></div>
+    <div id="durationfelt"></div>
+    <div id="notatfelt"></div>
     <div class="hidden" id="aftaleSelect">
      <h3>Du har valgt en aftale!</h3> <br>
       <button class="button" type="Submit">Gem aftale</button><br><br>
@@ -23,6 +25,6 @@
 
   </div>
 
-<script src="./home.js"></script>
+
 </body>
 </html>
