--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -51,7 +51,7 @@
             <div class="error-message" id="errorcode"></div>
             <div class="" id="cprfelt"></div>
             <div class="" id="navnfelt"></div>
-            <div class="" id="adressefelt"></div>
+            <div id="chooseButton"></div>
 
         </div>
 
