--- a/src/main/webapp/patienthome.html
+++ b/src/main/webapp/patienthome.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;700&display=swap" rel="stylesheet">
-    <script src="./clickCPR.js"></script>
+
 
 </head>
 <body>
@@ -15,6 +15,8 @@
 <h1>Personoverblik</h1>
 
 <div id="testid"></div>
-
+<div id="navnfelt2"></div>
+<div id="cprfelt2"></div>
+<div id="adressefelt2"></div>
 </body>
 </html>
