--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;700&display=swap" rel="stylesheet">
-    <script src="./clickCPR.js"></script>
+    <script src="clickFetch.js"></script>
     <script src="./dynamichtml.js"></script>
 </head>
 <body>
@@ -47,10 +47,12 @@
             <input type="text" class="input" name ="cpr" autofocus placeholder="Indtast CPR nr:"><br>
             </form>
 
-            <button class="button" type="Submit" onclick="clickCPR()">Søg CPR</button><br><br>
+            <button class="button" type="Submit" onclick="fetchCPR()">Søg CPR</button><br><br>
             <div class="error-message" id="errorcode"></div>
-            <div class="" id="cprfelt"></div>
             <div class="" id="navnfelt"></div>
+            <div class="" id="cprfelt"></div>
+            <div id="adressefelt"></div>
+
             <div id="chooseButton"></div>
 
         </div>
