--- a/src/main/webapp/aftaler.html
+++ b/src/main/webapp/aftaler.html
@@ -15,6 +15,8 @@
 
         <button class="button" type="Submit" id="fetchAftale" onclick="fetchAftale()">Hent aftaler...</button>
     </div>
+    <div id="aftaleTable"></div>
+    <div class="error-message" id="errorfelt3"></div>
     <div id="timestampfelt"></div>
     <div id="durationfelt"></div>
     <div id="notatfelt"></div>
