--- a/src/main/webapp/aftaler.html
+++ b/src/main/webapp/aftaler.html
@@ -11,9 +11,9 @@
 <body>
 
     <div class="" id="aftaleMain">
-    <h3>Her kommer aftaler</h3><br>
+    <h1>Aftaler</h1><br>
 
-        <button class="button" type="Submit" id="fetchAftale" onclick="fetchAftale()">Hent aftaler...</button>
+        <button class="button" type="Submit" id="fetchAftale" onclick="fetchAftale()" id="aftalebutton">Hent aftaler...</button>
     </div>
     <div id="aftaleTable"></div>
     <div class="error-message" id="errorfelt3"></div>
