--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -47,7 +47,7 @@
             <input type="text" class="input" name ="cpr" autofocus placeholder="Indtast CPR nr:"><br>
             </form>
 
-            <button class="button" type="Submit" onclick="fetchCPR()">Søg CPR</button><br><br>
+            <button class="button" type="Submit" onclick="fetchCPR()" id="cprbutton">Søg CPR</button><br><br>
             <div class="error-message" id="errorcode"></div>
             <div class="" id="navnfelt"></div>
             <div class="" id="cprfelt"></div>
