--- a/src/main/webapp/journal.html
+++ b/src/main/webapp/journal.html
@@ -12,11 +12,10 @@
 </head>
 <body>
 
-<h1>Personoverblik</h1>
+<h1>Journal</h1>
+<hr>
 
-<div id="testid"></div>
-<div id="navnfelt2"></div>
-<div id="cprfelt2"></div>
-<div id="adressefelt2"></div>
+
+
 </body>
 </html>
