Role-based authentication implemented. Needs clean-up.

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -13,6 +13,7 @@
 <body onload='loadHTML("sitecontent", "welcome.html")'>
 
     <header>
+
         <p><a href="#" class="logo">DTU-EHR system</a> <img src="./ekglogo.png" width="" class="ekglogo">
         </p>
 
@@ -58,6 +59,9 @@
 
 
 </body>
+<footer>
+    <div class="footer_container">Du er logget ind som:</div>
+    </footer>
 <script src="clickFetch.js"></script>
 <script src="./dynamichtml.js"></script>
 </html>
