Exception handling and mapping.

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -60,7 +60,7 @@
 
 </body>
 <footer>
-    <div class="footer_container">Du er logget ind som:</div>
+    <div class="footer_container">Du er logget ind som: <div id="userID"></div>( <div id="roleID"></div>) </div>
     </footer>
 <script src="clickFetch.js"></script>
 <script src="./dynamichtml.js"></script>
