Restriction of patientdata for logged in patient

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -45,6 +45,7 @@
             <h2 id="cprfelt_sidebar"></h2>
             <div id="addfelt_sidebar"></div>
             <div id="cityfelt_sidebar"></div>
+            <div id="error_sidebar" class="error-message"></div>
 
         </div>
 
