--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -73,7 +73,7 @@
             <div id="addfelt_sidebar"></div>
             <div id="cityfelt_sidebar"></div>
 
-            <div id="chooseNewPatientButton"></div>
+            <div id="chooseNewPatientButton" class="buttonbottom"></div>
 
         </div>
         <div id="error_sidebar" class="error-message"></div>
