--- a/src/main/webapp/welcome_worker.html
+++ b/src/main/webapp/welcome_worker.html
@@ -12,7 +12,7 @@
 
 
   <div id="welcomeContainerDoctor">
-    <div id="requestContainer">
+    <div id="requestFlagsContainer">
       <h2>Følgende patienter har anmodet om en konsultation:</h2>
       <div id="flagUserDiv"></div>
       <div id="flagContent">
