Tweaked a few things in view

--- a/src/main/webapp/aftaler_patient.html
+++ b/src/main/webapp/aftaler_patient.html
@@ -48,7 +48,7 @@
         <hr>
         <div style="display: flex;, column-gap: 50px; max-width: 300px; width:100%; justify-content: space-between;">
         <label>Dato: <div id="datefelt" class="fields"></div></label><br>
-        <label>Varighed: <div id="durationfelt" class="fields"></div></label>
+        <label>Varighed (minutter): <div id="durationfelt" class="fields"></div></label>
         </div><br>
         <label>Behandler:  <div id="workerusernamefelt" class="fields"></div></label><br>
 
@@ -110,7 +110,7 @@
             </button>
 
             </p>
-            <div class="success-message" id="successcode2"></div>
+
         </div>
 
     </div>
