Lab data implemented, ECG Visualizer

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;700&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 </head>
 <body onload='loadWelcome()'>
@@ -21,7 +22,7 @@
         <li><a href="#" onclick='loadWelcome()'>Hjem</a></li>
         <li><a href="#" onclick='loadHTML("sitecontent", "journal.html")'>Journal</a></li>
         <li><a href="#" onclick='loadAftaler()'>Konsultationer</a></li>
-        <li><a href="#" onclick='loadHTML("sitecontent", "lab.html")'>Laboratoriesvar</a></li>
+        <li><a href="#" onclick='loadLab()'>Laboratoriesvar</a></li>
         <li><a href="#popup1">Log-ud</a></li>
 
     </ul>
