--- a/src/main/webapp/lab.html
+++ b/src/main/webapp/lab.html
@@ -9,10 +9,30 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;700&display=swap" rel="stylesheet">
 
 
+
+
   <title>Title</title>
 </head>
 <body>
 <h1>Laboratoriesvar</h1>
 <hr>
+
+<div id="ekgListContainer" class="aftaleListContainer">
+  <h2>EKG-målinger</h2>
+  <div id="ekgListTable">
+
+  </div>
+
+</div>
+
+<div id="ekgMonitorContainer" class="aftaleListContainer">
+  <div>
+    <canvas id="ekg_canvas"></canvas>
+  </div>
+</div>
+
+
+
 </body>
+
 </html>
