--- a/src/main/webapp/aftaler_worker.html
+++ b/src/main/webapp/aftaler_worker.html
@@ -120,7 +120,7 @@
           </select><br><br>
           <label>Patient:<br></label>
           <select name="cpr" >
-            <option value="010101-0101">Wolff Parkinson-White</option>
+            <option value="010101-0101">Peter Jensen</option>
             <option value="123456-7899">Nicolas Cage</option>
 
 
